[powershell-plugin] security.manager=allow comment added